# modelalive

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  action.yml  docker-compose.yml  fly.toml  modelalive.toml  openapi.json  pyproject.toml
.cursor/rules/: model-ids.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: add-model.yml  config.yml  design-partner.yml  false-positive.yml  provider-request.yml
.github/workflows/: ci.yml  deploy.yml  drift-check.yml  drift-pr.yml  publish.yml  registry-refresh.yml  stable-offline.yml
api/: __init__.py  auth.py  billing.py  cache.py  main.py  middleware.py  status_page.py  store.py  usage.py
docs/: ACCURACY.md  ADOPTION.md  BILLING.md  CONTRIBUTING.md  DEPLOY.md  HOSTED_API.md  QUICKSTART.md  ROADMAP.md  STABLE.md  STATUS.md  UNIVERSAL.md
docs/marketing/: README.md  demo-output.txt  design-partner.md  (+5 more)
examples/: README.md  langchain_preflight.py  litellm_preflight.py  modelalive.toml  openai_preflight.py  pre-commit-modelalive.yaml
go/: README.md  go.mod
js/: .gitignore  README.md  package-lock.json  package.json
modelalive/: __init__.py  check.py  cli.py  config_file.py  exceptions.py  expiring.py  gate.py  lifecycle.py  normalize.py  probe.py  providers.py  registry.py  scan.py  settings.py  stable.py  types.py  universal.py  validate.py
registry/: CHANGELOG.md  models.json  providers.json  schema.json
scripts/: check_registry_drift.py  export_openapi.py  fetch_openrouter_models.py  generate_host_seeds.py  generate_openrouter_crosswalk.py  merge_seeds.py  parse_anthropic_deprecations.py  parse_fireworks_changelog.py  parse_google_deprecations.py  parse_groq_deprecations.py  parse_mistral_deprecations.py  parse_openai_deprecations.py  parse_together_deprecations.py  record_demo.sh  refresh_sources.py  sync_drift.py  sync_registry.py
tests/: test_api_auth.py  test_api_cache.py  test_api_extended.py  test_api_middleware.py  test_api_polish.py  test_api_stable.py  test_api_usage.py  test_billing.py  test_check.py  test_check_config.py  test_cli.py  test_config_stable.py  test_gate.py  test_host_registry.py  test_hypothesis.py  test_litellm_integration.py  test_normalize_bedrock.py  test_parsers.py  test_probe.py  test_probe_http.py  test_product_quality.py  test_registry_coverage.py  test_scan_expiring.py  test_stable.py  test_stable_validate.py  test_status_page.py  test_universal.py  test_validate_cycles.py
(+63 files in other folders)
